# projet-Analyse-numerique-Cplus-M1-UniLille

./: .gitignore  LICENSE  README.md  erreur.txt  erreur2.txt  ex42.cpp  ex43.cpp  ex431.cpp  ex4_2.cpp  ex4_3.cpp  graph.py  graph2.py  graph_Black_Scholes.py  partie1.cpp
Black-Scholes/: BS_implicit.txt  Black_Scholes.cpp  CMakeLists.txt  graph_Black_Scholes.py
Black-Scholes/python/: graph1.py  graph2.py  run_graphs.py
Black-Scholes/src/: Black_Scholes.h  main.cpp
Laplacien/: CMakeLists.txt  Makefile  Notation.md  graph.py  graph2.py  graph3.py  graph4.py  main.cpp  main2.cpp  main_inverse.cpp  matrice.cpp  matrice.h  matricebande.cpp  nhap.cpp  test
Laplacien/python/: graph.py  run_graphs.py
Laplacien/src/: main.cpp  main2.cpp  main_inverse.cpp  matrice.cpp  matricebande.cpp  matricebande.h  test.cpp
Poisson/: CMakeLists.txt  test
Poisson/python/: graph1.py  graph2.py  run_graphs.py
Poisson/src/: Poisson.cpp  Poisson.h  main.cpp
Schema_Numerique/: CMakeLists.txt  erreur2.txt
Schema_Numerique/python/: graph1.py  graph2.py  run_graphs.py
Schema_Numerique/src/: Schema_numerique.cpp  Schema_numerique.h  main.cpp  vecteur_template.h
